@@ -2173,6 +2173,7 @@ Harry Goldschmitt <harry at hgac dot com>
 Sail Zeng <sailzeng at tencent dot com>
 Markus Henschel <m dot henschel at bally-wulff dot de>
 Asif Lodhi <asif dot lodhi at gmail dot com>
+Yves Alloyer <alloyer at ipanematech dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
